add docs to amenities
